- Fixed crash when no pool type is found  - Customer table now has a min height, preventing the menu from being cut off.  - Service Package, Gate Code and Technician options now able to be set on customers.  - Added support for seperate billing address to the add customer form  - Customers that are added manually now show their service package as "Inactive (Customer Will Not Be Serviced) " by default

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,6 +42,10 @@
   margin-left: 30px
 }
 
+.mh-330{
+  min-height: 330px;
+}
+
 .of-hidden{
   overflow: hidden;
 }
@@ -66,7 +70,9 @@
   color: #6FCF97
 }
 
-
+.carousel-container {
+  width: 100%;
+ }
 
 .react-bootstrap-table table {
   table-layout: auto;
